--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "build": "./node_modules/.bin/babel src.js --out-file build/index.js && lessc main.less build/main.css --autoprefix=\"last 2 versions\""
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "jquery": "^3.2.1",
-    "less-plugin-autoprefix": "^1.5.1",
-    "rangepicker.js": "^1.2.2"
+    "jquery": "^3.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "less-plugin-autoprefix": "^1.5.1",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cbin0/slider-picker.git"
